2007-07-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: clarify which procedures work with RGB
	profiles and which accept profiles for other colorspaces.
	Calculate MD5 checksums of the profile data excluding the header
	and skip attempts to convert between identical profiles (bug #456017).

2007-07-11  Sven Neumann  <sven@gimp.org>

	* data/brushes/Calligraphic-Brush-*.vbr
	* data/brushes/Circle-*.vbr
	* data/brushes/Diagonal-Star-*.vbr: restored spacing values. Closes
	bug #157506 again.

2007-07-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/chrome-it.scm
	* plug-ins/script-fu/scripts/perspective-shadow.scm
	* plug-ins/script-fu/scripts/selection-round.scm
	* plug-ins/script-fu/scripts/sota-chrome-logo.scm
	* plug-ins/script-fu/scripts/swirltile.scm
	* plug-ins/script-fu/scripts/waves-anim.scm: added leading zero to
	floating point numbers.

2007-07-11  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c: Removed bitfieldized values from
	the SideToResize enum, they are irrelevant. Also renamed
	HANDLE_SIZE to MAX_HANDLE_SIZE.

2007-07-10  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/3dTruchet.scm: TinyScheme doesn't like
	inexact numbers to start with a decimal point. Added leading '0' to
	two instances of '.2'.

2007-07-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg.c
	* plug-ins/jpeg/jpeg-save.[ch]: fixed an issue with the latest
	changes. Now "Load Defaults" does also work if "Save Defaults"
	wasn't used before.

2007-07-09  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c
	(gimp_prop_file_chooser_button_setup): added evil hack to work
	around bug #327243 in GtkFileChooserButton.

2007-07-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg.c (run): when the save procedure is being
	called with GIMP_RUN_WITH_LAST_VALS and the image doesn't have the
	"jpeg-save-options" parasite set, show the dialog to give the user