@@ -1,3 +1,8 @@
+2007-07-12  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/psd-load.c: don't divide by zero when loading a
+	layer or mask with zero width or height. Fixes bug #456042.
+
 2007-07-11  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/lcms.c: clarify which procedures work with RGB
